# concrete_block_motion_planning

./: .gitignore  CMakeLists.txt  HANDOVER_2026-03-31.md  README.md  VENDOR_README.md  acados_interface_setup.sh  package.xml  pyproject.toml  requirements-benchmark.txt  requirements-core.txt
.github/workflows/: prototype-ci.yml
config/: grip_traj_simple.yaml  headless_trajectory_profiles.yaml  motion_planning.yaml  motion_planning_concrete_compatibility.yaml  motion_planning_timber_commissioning.yaml  named_configurations.yaml  wall_plan_server.yaml
doc/: API_CHANGES.md  ARCHITECTURE.md  SERVICES.md  STANDALONE_PLANNER_HANDOFF.md  TIMBER_COMPATIBILITY_CONTRACT.md
launch/: motion_planning.launch.py  motion_planning_concrete_compatibility.launch.py  motion_planning_timber_commissioning.launch.py
motion_planning/: __init__.py  api.py  demo.py  demo_viz.py  joint_goal_stage.py  joint_space_global_path.py  joint_space_stage.py  planner.py  scenario.py  scenarios.py  spline.py  standalone.py  world_model.py
motion_planning/adapters/: __init__.py  controller_adapter.py
motion_planning/contracts/: __init__.py  robot_profile.py  trajectory_contract.py
motion_planning/control/: __init__.py  computed_torque.py  pd.py
motion_planning/conversion/: README.md  __init__.py  cli.py  urdf_to_mjcf.py
motion_planning/core/: __init__.py  types.py
motion_planning/data/: acados_bench_cases.yaml  crane.urdf  crane_groundtruth_pzs100.urdf  generated_scenarios.yaml  optimized_params.yaml  wall_plans.yaml
motion_planning/geometry/: arm_model.py  blocks.py  gripper_collision_proxies_manual.yaml  planning.py  scene.py  spline_opt.py
motion_planning/io/: __init__.py  optimized_params.py
motion_planning/kinematics/: __init__.py  crane.py
motion_planning/mechanics/: README.md  UNDERACTUATED_MODELS.md  __init__.py  config.py  crane_config.yaml  crane_geometry.py  crane_kinematics.py  inverse_kinematics.py  model_description.py  model_information.py  pinocchio_utils.py  pose_conventions.py  reference_states.py  steady_state.py
motion_planning/mechanics/analytic/: __init__.py  config.py  inverse_kinematics.py  model_description.py  pinocchio_utils.py  projected_dynamics.py  split_dynamics.py  steady_state.py
motion_planning/pipeline/: __init__.py  geometric_stage.py  joint_goal_stage.py  joint_space_global_path.py  joint_space_stage.py
motion_planning/planners/: __init__.py  base.py  factory.py  joint_path.py  spline.py
motion_planning/planners/vpsto/: __init__.py  crane_model.py  solver.py
motion_planning/profiles/: __init__.py  concrete_pzs100.py  timber.py
motion_planning/standalone/: __init__.py  common.py  compare_solvers.py  demo_support.py  evaluate.py  plotting.py  reference_paths.py  scenarios.py  time_parameterization.py  types.py
motion_planning/standalone/stacks/: __init__.py  cartesian_anchor_joint_spline.py  joint_goal_interpolation.py  joint_space_global_path.py  vpsto_ilqr.py  vpsto_path_planning.py
motion_planning/tests/: __init__.py  test_acados_straight_line_trajectory_sampling.py  test_analytic_inverse_kinematics.py  test_analytic_kinematics.py  test_benchmark_clearance_regression.py  test_cartesian_path_following.py  test_cbmp_api_contract.py  test_cbmp_backend_selection.py  test_cbmp_compatibility_interface.py  test_cbmp_config.py  test_cbmp_config_runtime.py  test_cbmp_integration_services.py  test_cbmp_wall_plan_progression.py  test_cbmp_yaml_validation.py  test_cem_smoke.py  test_controller_adapter.py  test_conversion_urdf_mjcf.py  test_crane_random_steady_state_headless.py  test_crane_steady_state.py  test_demo_support.py  test_execution_adapter.py  test_headless_trajectory_profiles.py  test_initialization_outside_pick_approach.py  test_joint_goal_stage.py  test_joint_space_global_path.py  test_joint_space_stage.py  test_joint_stage1_planner.py  test_public_api.py  test_random_planning_path_vs_trajectory.py  test_robot_profiles.py  test_scene_signed_distance.py  test_standalone_lab.py  test_steady_state_and_planner_sampling.py  test_timber_compat_helpers.py  test_wall_pipeline_tracking_and_sway.py  test_wall_plan_generator.py
motion_planning/tests/trajectory_optimization/: __init__.py  test_cartesian_sampling_and_runtime_updates.py  test_joint_space_sampling_and_runtime_updates.py
motion_planning/trajectory/: PUBLICATION_NOTES_PATH_FOLLOWING_HESSIAN_DYNAMICS.md  __init__.py  base.py  dynamics.py  joint_accel_limits.yaml  joint_position_limits.yaml  limits.py  planning_limits.py  planning_limits.yaml
motion_planning/trajectory/cartesian_path_following/: SOLVER_DESIGN.md  __init__.py  config.py  ocp_formulation.tex  ocp_free_time_formulation.tex  optimizer.py
motion_planning/trajectory/ilqr/: __init__.py  cost.py  dynamics.py  reference.py  solver.py
motion_planning_tools/benchmark/: __init__.py  cli.py  config.py  metrics.py  planners.py  search.py
motion_planning_tools/simulation/: __init__.py  mujoco_pd_replay.py
motion_planning_tools/standalone/: run_planner_experiment.py  verify_kinematics.py  visualize_arm_capsules.py
scripts/: acados_benchmark.py  bare_metal_single_block_client.py  dummy_gripper_state_publisher.py  dummy_joint_state_publisher.py  grip_traj_server_simple.py  grip_trajectory.py  gripper_state_bridge.py  headless_trajectory_smoke.py  joint_goal_feasibility_probe.py  joint_state_timber_compat.py  motion_planning_node.py  rviz_move_empty_interface.py  timber_follow_joint_trajectory_proxy.py  wall_plan_server.py
scripts/cbmp/: __init__.py  compatibility.py  config.py  execution.py  ids.py  named_configurations.py  node.py  path_setup.py  results.py  runtime.py  services.py  state.py  types.py
srv/: ComputeTrajectory.srv  ExecuteNamedConfiguration.srv  ExecutePlannedMotion.srv  ExecuteTrajectory.srv  GetNextAssemblyTask.srv  PlanAndComputeTrajectory.srv  PlanBlockMotion.srv  PlanGeometricPath.srv
utils/: gripper_inertia.py
(+8 files in other folders)
