<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>concrete_block_motion_planning</name>
  <version>0.1.0</version>
  <description>Wall plan server and grip trajectory planner for concrete block assembly.</description>
  <maintainer email="vscode@example.com">vscode</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>builtin_interfaces</depend>
  <depend>trajectory_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>timber_crane_planning_interfaces</depend>
  <exec_depend>concrete_block_perception</exec_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
