<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>concrete_block_motion_planning</name>
  <version>0.1.0</version>
  <description>Grip trajectory planner for concrete block assembly.</description>
  <maintainer email="vscode@example.com">vscode</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>timber_crane_planning_interfaces</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
