[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "concrete-block-motion-planning"
version = "0.1.0"
description = "Python dependency metadata for concrete_block_motion_planning runtime and tooling"
readme = "VENDOR_README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "scipy",
  "python-fcl",
  "matplotlib",
  "casadi",
  "cython",
  "Deprecated",
]

[project.optional-dependencies]
traj = [
  # acados python interface dependency; installed from local source in this repo
  # via: pip install -e acados/interfaces/acados_template
  "setuptools_scm",
]
benchmark = [
  "optuna",
  "pandas",
]

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
where = ["."]
include = ["motion_planning*", "motion_planning_tools*"]
exclude = ["acados*", "build*", "install*", "log*"]
